--- a/content/index.html
+++ b/content/index.html
@@ -1590,6 +1590,255 @@
           </div>
         </div>
       </div>
+      <div id="Content" class="team-wrapper" lang-style="team" v-show="currentMenu === 'team'">
+        <div
+          class="section no-margin-h no-margin-v full-width wrap-reverse bg-contain"
+          style="
+            padding-bottom: 100px;
+            background-image: url(images/team.png);
+            background-repeat: no-repeat;
+            background-position: left bottom;
+          "
+        >
+          <div class="row">
+            <div class="col-md-1" data-col="one-sixth">
+              <div class="placeholder">&nbsp;</div>
+            </div>
+            <div class="col-md-5 team" data-col="one-third">
+              <div class="mobile_align_center">
+                <hr class="no_line" style="margin: 0 auto 10px auto" />
+                <h1 class="line-hight-168">
+                  <span lang="team_first" class="team-title"></span>
+                  <p class="themecolor" lang="team_second"></p>
+                </h1>
+              </div>
+            </div>
+            <div class="col-md-6" data-col="one-second">
+              <div class="column_attr clearfix align_right mobile_align_center">
+                <img src="images/shopassistant-pricing-pic1.webp" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="section" style="padding-bottom: 60px">
+          <div class="container img-container">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_third.jpg" lang-alt="team_third" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_third"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_fourth.jpg" lang-alt="team_fourth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_fourth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_fifth.jpg" lang-alt="team_fifth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_fifth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_sixth.jpg" lang-alt="team_sixth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_sixth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_seventh.jpg" lang-alt="team_seventh" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_seventh"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_eighth.jpg" lang-alt="team_eighth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_eighth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_ninth.jpg" lang-alt="team_ninth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_ninth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_tenth.jpg" lang-alt="team_tenth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_tenth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4">
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_eleventh.jpg" lang-alt="team_eleventh" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_eleventh"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_twelveth.jpg" lang-alt="team_twelveth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_twelveth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_thirteenth.jpg" lang-alt="team_thirteenth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_thirteenth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_fourteenth.jpg" lang-alt="team_fourteenth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_fourteenth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="img-wrap">
+                  <img src="images/staff-presence/team_fifteenth.jpg" lang-alt="team_fifteenth" />
+                  <div class="portfoli-content">
+                    <div class="sup-desc-wrap">
+                      <div class="sup-desc-inner">
+                        <div class="sup-meta-wrap">
+                          <a class="sup-title" href="#" one-link-mark="yes">
+                            <h4 lang="team_fifteenth"></h4>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="section" style="padding-bottom: 60px">
+          <div class="container">
+            <div class="row" data-col="one">
+              <div class="col-12">
+                <div class="text-center" style="line-height: 88px">
+                  <h2>
+                    <span class="themecolor" lang="team_sixteenth"></span>
+                  </h2>
+                  <h2 style="margin-top: 20px" lang="team_seventeenth"></h2>
+                  <div class="image_wrapper">
+                    <img
+                      class="scale-with-grid"
+                      src="images/shopassistant-sep2.png"
+                      alt="shopassistant-sep2"
+                      width="26"
+                      height="8"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <footer id="Footer" class="clearfix">
         <div
