--- a/content/team.html
+++ b/content/team.html
@@ -14,10 +14,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <!-- Mobile Specific Metas -->
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- Favicons -->
     <link rel="shortcut icon" href="images/favicon.ico" />
     <!-- FONTS -->
@@ -94,43 +91,28 @@
                     <nav id="menu">
                       <ul id="menu-main-menu" class="menu menu-main">
                         <li>
-                          <a href="../../index-shopassistant.html"
-                            ><span lang="menu_first"></span
-                          ></a>
+                          <a href="../../index-shopassistant.html"><span lang="menu_first"></span></a>
                         </li>
                         <li>
-                          <a href="about.html"
-                            ><span lang="menu_second"></span
-                          ></a>
+                          <a href="about.html"><span lang="menu_second"></span></a>
                         </li>
                         <li>
-                          <a href="culture.html"
-                            ><span lang="menu_third"></span
-                          ></a>
+                          <a href="culture.html"><span lang="menu_third"></span></a>
                         </li>
                         <li>
-                          <a href="product.html"
-                            ><span lang="menu_fourth"></span
-                          ></a>
+                          <a href="product.html"><span lang="menu_fourth"></span></a>
                         </li>
                         <li class="current-menu-item">
-                          <a href="team.html"
-                            ><span lang="menu_fifth"></span
-                          ></a>
+                          <a href="team.html"><span lang="menu_fifth"></span></a>
                         </li>
                         <li>
-                          <a href="contact.html"
-                            ><span lang="menu_sixth"></span
-                          ></a>
+                          <a href="contact.html"><span lang="menu_sixth"></span></a>
                         </li>
                       </ul>
                     </nav>
-                    <a
-                      class="responsive-menu-toggle"
-                      href="#"
-                      aria-label="Mobile menu"
-                      ><i class="icon-menu-fine" aria-hidden="true"></i
-                    ></a>
+                    <a class="responsive-menu-toggle" href="#" aria-label="Mobile menu">
+                      <i class="icon-menu-fine" aria-hidden="true"></i>
+                    </a>
                   </div>
                 </div>
                 <div class="top_bar_right">
@@ -166,10 +148,7 @@
             <div class="col-md-1" data-col="one-sixth">
               <div class="placeholder">&nbsp;</div>
             </div>
-            <div
-              class="col-md-5 team"
-              data-col="one-third"
-            >
+            <div class="col-md-5 team" data-col="one-third">
               <div class="mobile_align_center">
                 <hr class="no_line" style="margin: 0 auto 10px auto" />
                 <h1 class="line-hight-168">
@@ -190,10 +169,7 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/2020年团队拓展活动.jpg"
-                    lang-alt="team_third"
-                  />
+                  <img src="images/staff-presence/team_third.jpg" lang-alt="team_third" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -207,10 +183,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/西安团建活动.jpg"
-                    lang-alt="team_fourth"
-                  />
+                  <img src="images/staff-presence/team_fourth.jpg" lang-alt="team_fourth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -224,10 +197,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/捐赠九江都昌儿童爱心学校.jpg"
-                    lang-alt="team_fifth"
-                  />
+                  <img src="images/staff-presence/team_fifth.jpg" lang-alt="team_fifth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -241,10 +211,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/三八妇女节团建活动.jpg"
-                    lang-alt="team_sixth"
-                  />
+                  <img src="images/staff-presence/team_sixth.jpg" lang-alt="team_sixth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -260,10 +227,7 @@
               </div>
               <div class="col-md-4">
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/2023年团队拓展活动.jpg"
-                    lang-alt="team_seventh"
-                  />
+                  <img src="images/staff-presence/team_seventh.jpg" lang-alt="team_seventh" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -277,10 +241,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/年会大合照.jpg"
-                    lang-alt="team_eighth"
-                  />
+                  <img src="images/staff-presence/team_eighth.jpg" lang-alt="team_eighth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -294,10 +255,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/公司爱心捐助大学生.jpg"
-                    lang-alt="team_ninth"
-                  />
+                  <img src="images/staff-presence/team_ninth.jpg" lang-alt="team_ninth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -311,10 +269,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/2021年年度总结大会.jpg"
-                    lang-alt="team_tenth"
-                  />
+                  <img src="images/staff-presence/team_tenth.jpg" lang-alt="team_tenth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -330,10 +285,7 @@
               </div>
               <div class="col-md-4">
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/董事长致辞.jpg"
-                    lang-alt="team_eleventh"
-                  />
+                  <img src="images/staff-presence/team_eleventh.jpg" lang-alt="team_eleventh" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -347,10 +299,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/年会颁奖.jpg"
-                    lang-alt="team_twelveth"
-                  />
+                  <img src="images/staff-presence/team_twelveth.jpg" lang-alt="team_twelveth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -364,10 +313,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/2022年团队拓展活动.jpg"
-                    lang-alt="team_thirteenth"
-                  />
+                  <img src="images/staff-presence/team_thirteenth.jpg" lang-alt="team_thirteenth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -381,10 +327,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/员工大合照.jpg"
-                    lang-alt="team_fourteenth"
-                  />
+                  <img src="images/staff-presence/team_fourteenth.jpg" lang-alt="team_fourteenth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -398,10 +341,7 @@
                   </div>
                 </div>
                 <div class="img-wrap">
-                  <img
-                    src="images/staff-presence/株洲方特团建活动.jpg"
-                    lang-alt="team_fifteenth"
-                  />
+                  <img src="images/staff-presence/team_fifteenth.jpg" lang-alt="team_fifteenth" />
                   <div class="portfoli-content">
                     <div class="sup-desc-wrap">
                       <div class="sup-desc-inner">
@@ -444,11 +384,7 @@
         </div>
         <div
           class="section mcb-section"
-          style="
-            padding-top: 100px;
-            padding-bottom: 60px;
-            background-color: #ffcf00;
-          "
+          style="padding-top: 100px; padding-bottom: 60px; background-color: #ffcf00"
           data-parallax="3d"
           lang-style="msg"
         >
@@ -460,10 +396,7 @@
           />
           <div
             class="section-decoration top"
-            style="
-              background-image: url(images/shopassistant-section-pic1.webp);
-              height: 35px;
-            "
+            style="background-image: url(images/shopassistant-section-pic1.webp); height: 35px"
           ></div>
           <div class="container">
             <div class="row">
@@ -471,19 +404,13 @@
                 <div class="row">
                   <div class="col-md-12">
                     <div class="column_attr clearfix mobile_align_center">
-                      <img
-                        class="scale-with-grid"
-                        src="images/shopassistant-sep3.svg"
-                      />
+                      <img class="scale-with-grid" src="images/shopassistant-sep3.svg" />
                       <hr class="no_line" style="margin: 0 auto 10px auto" />
                       <h2 class="bottom-h2">
                         <p lang="msg_first"></p>
                         <p lang="msg_second"></p>
                       </h2>
-                      <img
-                        class="scale-with-grid cutting-line"
-                        src="images/shopassistant-sep6.svg"
-                      />
+                      <img class="scale-with-grid cutting-line" src="images/shopassistant-sep6.svg" />
                       <hr class="no_line" style="margin: 0 auto 10px auto" />
                       <p class="bottom-text">
                         <span style="color: #12263a">
@@ -499,11 +426,7 @@
               <div
                 class="col-md-6"
                 data-col="one-second"
-                style="
-                  padding: 50px 70px;
-                  background-color: #fff;
-                  border-radius: 32px;
-                "
+                style="padding: 50px 70px; background-color: #fff; border-radius: 32px"
               >
                 <h4 lang="msg_sixth"></h4>
                 <div id="contactWrapper">
@@ -541,16 +464,17 @@
             </div>
             <div class="col-md-6">
               <figure class="wp-block-image size-full">
-                <img
-                  src="images/shopassistant-footer-logo.svg"
-                  class="wp-image-206"
-                />
+                <img src="images/shopassistant-footer-logo.svg" class="wp-image-206" />
               </figure>
               <p>
-                Envato <br />
-                Level 13, <br />
-                2 Elizabeth, <br />
-                Victoria 3000, <br />
+                Envato
+                <br />
+                Level 13,
+                <br />
+                2 Elizabeth,
+                <br />
+                Victoria 3000,
+                <br />
                 Australia
               </p>
             </div>
@@ -558,32 +482,19 @@
               <h6>Navigation</h6>
               <ul>
                 <li>
-                  <a href="about.html" data-type="URL" data-id="about.html"
-                    >Product</a
-                  >
+                  <a href="about.html" data-type="URL" data-id="about.html">Product</a>
                 </li>
                 <li>
-                  <a
-                    href="culture.html"
-                    data-type="URL"
-                    data-id="culture.html"
-                    >Security</a
-                  >
+                  <a href="culture.html" data-type="URL" data-id="culture.html">Security</a>
                 </li>
                 <li>
-                  <a href="product.html" data-type="URL" data-id="product.html"
-                    >Pricing</a
-                  >
+                  <a href="product.html" data-type="URL" data-id="product.html">Pricing</a>
                 </li>
                 <li>
-                  <a href="team.html" data-type="URL" data-id="team.html"
-                    >Blog</a
-                  >
+                  <a href="team.html" data-type="URL" data-id="team.html">Blog</a>
                 </li>
                 <li>
-                  <a href="contact.html" data-type="URL" data-id="contact.html"
-                    >Contact</a
-                  >
+                  <a href="contact.html" data-type="URL" data-id="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
@@ -605,17 +516,10 @@
         <div class="footer_copy">
           <div class="container">
             <div class="column one">
-              <a id="back_to_top" class="footer_button" href="#"
-                ><i class="icon-up-open-big"></i
-              ></a>
+              <a id="back_to_top" class="footer_button" href="#"><i class="icon-up-open-big"></i></a>
               <div class="copyright">
                 &copy; 2021 - BeTheme. Muffin group - HTML by
-                <a
-                  target="_blank"
-                  rel="nofollow"
-                  href="https://1.envato.market/9ZxXY"
-                  >BeantownThemes</a
-                >
+                <a target="_blank" rel="nofollow" href="https://1.envato.market/9ZxXY">BeantownThemes</a>
               </div>
             </div>
           </div>
@@ -628,9 +532,7 @@
         <a href="#" class="close"><i class="icon-cancel-fine"></i></a>
       </div>
       <div class="extras">
-        <a href="contact.html" class="action_button" target="_blank"
-          >Free Consultation</a
-        >
+        <a href="contact.html" class="action_button" target="_blank">Free Consultation</a>
         <div class="extras-wrapper"></div>
       </div>
       <div class="menu_wrapper"></div>
@@ -645,20 +547,17 @@
     <script src="../../js/translate3d.js"></script>
     <script src="../../js/scripts.js"></script>
     <script src="../../js/index.js"></script>
-    <script
-      type="application/javascript"
-      src="https://api.ip.sb/geoip?callback=getip"
-    ></script>
+    <script type="application/javascript" src="https://api.ip.sb/geoip?callback=getip"></script>
     <script src="../../js/swiper-bundle.min.js"></script>
     <script>
-      var swiper = new Swiper(".mySwiper", {
+      var swiper = new Swiper('.mySwiper', {
         slidesPerView: 3,
         spaceBetween: 30,
         freeMode: true,
         pagination: {
-          el: ".swiper-pagination",
-          clickable: true,
-        },
+          el: '.swiper-pagination',
+          clickable: true
+        }
       });
     </script>
   </body>
